# athena-protobufs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Resolver.Athena.Grpc.slnx  nuget.config  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  testcases-release.yml
athena/: athena.proto  models.proto
docs/: Makefile  README.md  api_reference.rst  best_practices.rst  classification_responses.rst  conf.py  deployment_guide.rst  examples.rst  index.rst  overview.rst
docs/proto/: athena_proto.rst  index.rst  models_proto.rst
src/: Directory.Build.props  Directory.Packages.props
src/Resolver.Athena.Grpc.Client/: Resolver.Athena.Grpc.Client.csproj
src/Resolver.Athena.Grpc.Models/: Resolver.Athena.Grpc.Models.csproj
testcases/: README.md
testcases/benign_model/: README.md  expected_outputs.json
testcases/integrator_sample/: README.md
testcases/live_model/: README.md
