[project]
name = "athena-protobufs"
version = "0.0.0"
description = "Protocol Buffer definitions and documentation for Athena CSAM Detection API"
authors = [{ name = "Crisp Thinking Group Ltd.", email = "opensource@kroll.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    # Protocol buffer support
    "protobuf>=4.0.0",
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
]

[dependency-groups]
docs = [
    # Sphinx documentation dependencies
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",

    # Extensions for enhanced documentation
    "sphinx-autobuild>=2021.3.14",
    "sphinxcontrib-spelling>=8.0.0",

    # Additional documentation tools
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.0",
    "furo>=2023.0.0",
]

[project.urls]
Homepage = "https://github.com/crispthinking/athena-protobufs"
Documentation = "https://crispthinking.github.io/athena-protobufs"
Repository = "https://github.com/crispthinking/athena-protobufs"
Issues = "https://github.com/crispthinking/athena-protobufs/issues"
